--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,6 @@
   "scripts": {
     "start": "node index.js",
     "postinstall": "prisma generate"
-
   },
   "dependencies": {
     "@prisma/client": "5.22.0",
@@ -13,6 +12,7 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^4.19.2",
+    "financial": "^0.2.4",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.1",
     "prisma": "5.22.0"
